Java 9: Replace 'new Long' with 'Long.valueOf'